Added simple test execution